Ajustes de integração com serviço de item e regra de negocio